RESOLVED FIXED92972
[Qt] Uninitialized memory read in QObject runtime bridge
https://bugs.webkit.org/show_bug.cgi?id=92972
Summary [Qt] Uninitialized memory read in QObject runtime bridge
Simon Hausmann
Reported 2012-08-02 04:11:56 PDT
[Qt] Uninitialized memory read in QObject runtime bridge
Attachments
Patch (2.56 KB, patch)
2012-08-02 04:13 PDT, Simon Hausmann
no flags
Simon Hausmann
Comment 1 2012-08-02 04:13:41 PDT
WebKit Review Bot
Comment 2 2012-08-02 05:26:29 PDT
Comment on attachment 156036 [details] Patch Clearing flags on attachment: 156036 Committed r124442: <http://trac.webkit.org/changeset/124442>
WebKit Review Bot
Comment 3 2012-08-02 05:26:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.