[Qt] Uninitialized memory read in QObject runtime bridge https://bugs.webkit.org/show_bug.cgi?id=92972

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-08-02
Reviewed by Kenneth Rohde Christiansen.

The vargs array has an initial size of 0 and when calling a method with no return value
and no arguments, vargs remains empty. Therefore unconditional access to vargs[0] results
in access to uninitialized memory.

No new tests, covered by valgrind in existing qobjectbridge tests.

* bridge/qt/qt_runtime.cpp:
(JSC::Bindings::QtRuntimeMetaMethod::call):
* bridge/qt/qt_runtime_qt4.cpp:
(JSC::Bindings::QtRuntimeMetaMethod::call):

git-svn-id: svn://svn.chromium.org/blink/trunk@124442 bbb929c8-8fbe-4397-9dbb-9b2b20218538