third_party/WebKit/Source/WebCore/bridge/qt/qt_runtime.cpp
@@ -1434,7 +1434,7 @@ EncodedJSValue QtRuntimeMetaMethod::call(ExecState* exec)
             if (QMetaObject::metacall(obj, QMetaObject::InvokeMetaMethod, methodIndex, qargs) >= 0)
                 return JSValue::encode(jsUndefined());
 
-            if (vargs[0].isValid())
+            if (vargs.size() > 0 && vargs[0].isValid())
                 return JSValue::encode(convertQVariantToValue(exec, d->m_instance->rootObject(), vargs[0]));
         }
 
